# testing-task-histogram

./: CMakeLists.txt  README.md  RightBar.qml  data_reader.cpp  main.cpp  main.qml  use_case_histogram_impl.h  use_case_reader_impl.h
qml/: CustomButton.qml  CustomWarningPopup.qml  HistogramWidget.qml  main.qml
source/: data_reader.h  histogram.cpp  histogram.hpp  main.cpp  model.h  use_case.cpp  use_case.h  use_case_histogram_impl.cpp  use_case_reader_impl.cpp
